# ASE

./: .gitignore
client/: CMakeLists.txt
client/include/: player.hpp  player_list.hpp  server_link.hpp
client/src/: main.cpp
server/: CMakeLists.txt
server/include/: client.hpp  client_list.hpp  internal_message.hpp  server.hpp  welcome_thread_functions.hpp
server/src/: main.cpp
shared/include/: connection_expections.hpp  cross_sockets.hpp  frame.hpp  message.hpp  message_codes.hpp  security_properties.hpp
shared/src/: frame.cpp  message.cpp
